--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,7 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-      - NODE_ENV=production
-      - JAEGER_AGENT_HOST=jaeger
-      - JAEGER_AGENT_PORT=6831
-      - JAEGER_SERVICE_NAME=ticketing-app
+  app:
     build: .
     ports:
       - "3049:3049"
@@ -17,19 +14,19 @@ services:
       - REDIS_URL=redis://redis:6379
     depends_on:
       - redis
-  jaeger:
-    image: jaegertracing/all-in-one:1.56
-    ports:
-      - "16686:16686" # Jaeger UI
-      - "6831:6831/udp" # Jaeger agent (UDP)
-      - "14268:14268" # Jaeger collector (HTTP)
-    environment:
-      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
   prometheus:
     image: prom/prometheus:latest
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  jaeger:
+    image: jaegertracing/all-in-one:1.55
+    ports:
+      - "16686:16686" # Jaeger UI
+      - "14268:14268" # Collector HTTP endpoint
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    restart: unless-stopped
 volumes:
   redis_data:
